<resources>
    <string name="app_name">MobEras</string>
    <string name="question_pain">Arraste a seta até a figura que representa o seu nível de dor nas últimas seis horas.</string>
    <string name="question_nausea">Clique na figura que melhor define o seu nível de náuseas e vômitos nas últimas seis horas.</string>
    <string name="question_nausea_presence">Você vomitou nas últimas seis horas?</string>
    <string name="question_diuresis">Clique na figura que melhor define o seu volume de urina nas últimas seis horas.</string>
    <string name="question_diet">Clique na figura que melhor representa o quanto você conseguiu comer e beber nas últimas seis horas.</string>
    <string name="question_general_health">Clique na figura que melhor representa o quanto você se sentiu de maneira geral nas últimas seis horas.</string>
    <string name="question_flatus_presence">Você eliminou gases nas últimas seis horas?</string>
    <string name="question_stool_presence">Você eliminou fezes nas últimas seis horas?</string>
    <string name="star_earned">Você ganhou uma estrela!</string>
</resources>
