<!-- TODO: Add Image Scales and Indicators/Buttons -->
<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FeedbackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_frame"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/tv_pain_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:text="@string/question_pain" />

            <TextView
                android:id="@+id/tv_pain_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_pain_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@raw/eva_scale"
                    android:paddingTop="15dp"/>

                <SeekBar
                    android:id="@+id/sb_pain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingStart="16dp"
                    android:paddingEnd="28dp"
                    style="@style/SimpleSeekBar"
                    android:progress="0"
                    android:max="10"/>

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_frame"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/tv_nausea_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:text="@string/question_nausea" />

            <TextView
                android:id="@+id/tv_nausea_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_frame"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/tv_diuresis_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:text="@string/question_diuresis" />

            <TextView
                android:id="@+id/tv_diuresis_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_frame"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/tv_diet_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:text="@string/question_diet" />

            <TextView
                android:id="@+id/tv_diet_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_frame"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/tv_general_health_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:text="@string/question_general_health" />

            <TextView
                android:id="@+id/tv_general_health_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SimpleText"
                android:layout_gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_ok_feedback"
            style="@style/SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_frame"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="Pronto "/>

    </LinearLayout>
</ScrollView>